[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/title_screen/buttons/HowToPlayButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Songs/Eivor_Title_Screen.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/title_screen/buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/title_screen/buttons/PlayButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/title_screen/fade_in/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://Assets/graphic design is my passion.png" type="Texture" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1829.0
margin_bottom = 398.0
size_flags_horizontal = 13
size_flags_vertical = 13
texture = ExtResource( 7 )
stretch_mode = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 402.0
margin_right = 1829.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1829.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 1829.0
rect_min_size = Vector2( 360, 60 )

[node name="HowToPlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 64.0
margin_right = 1829.0
margin_bottom = 124.0
rect_min_size = Vector2( 360, 60 )

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 128.0
margin_right = 1829.0
margin_bottom = 188.0
rect_min_size = Vector2( 360, 60 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_top = 594.0
margin_right = 1829.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 1829.0
margin_bottom = 14.0
text = "Credits go here"
align = 1
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0
[connection signal="pressed" from="Menu/CenterRow/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
